--- a/markup/_layouts/_content/change-password-content.jade
+++ b/markup/_layouts/_content/change-password-content.jade
@@ -1,19 +1,20 @@
 section.nl-section.change-password-wrapper
-    #changePasswordSection(tabindex='-1', role='dialog', aria-labelledby='changePasswordSectionLabel', aria-hidden='true')
-        .block-dialog(role='document')
-            .block-content
-                .block-header
-                    h2#changePasswordSectionLabel.modal-title Change Password
-                .block-body
-                    form.form-signin
-                        .input-group
-                            label Old Password
-                            input.form-control(type='password')
-                        .input-group
-                            label New Password
-                            input.form-control(type='password')
-                        .input-group
-                            label Confirm Password
-                            input.form-control(type='password')
-                .block-footer
-                    button.btn.btn-primary.btn-block(type='submit') Save
+    div.row.center-div
+        .col-2.col-sm-3.col-md-3.col-lg-3.col-xl-3
+        .col-8.col-sm-6.col-md-6.col-lg-6.col-xl-6
+            #changePasswordSection(tabindex='-1', role='dialog', aria-labelledby='changePasswordSectionLabel', aria-hidden='true')
+                .block-dialog(role='document')
+                    .block-content
+                        .block-header
+                            h2#changePasswordSectionLabel.modal-title Change Password
+                        .block-body
+                            form.form-signin
+                                .input-group
+                                    input.form-control(type='password', placeholder='OLD PASSWORD')
+                                .input-group
+                                    input.form-control(type='password', placeholder='NEW PASSWORD')
+                                .input-group
+                                    input.form-control(type='password', placeholder='CONFIRM PASSWORD')
+                        .block-footer
+                            button.btn.btn-primary.btn-block(type='submit') Save
+        .col-2.col-sm-3.col-md-3.col-lg-3.col-xl-3
