--- a/markup/_layouts/change_password.jade
+++ b/markup/_layouts/change_password.jade
@@ -12,12 +12,13 @@ html(lang="en")
         include _partials/styles.jade
 
     body
-        //include _partials/preloader.jade
-        include _partials/header-log.jade
-        main
-            include _content/change-password-content
+        .nl-wrapper
+            //include _partials/preloader.jade
+            include _partials/header-form.jade
+            main
+                include _content/change-password-content
 
-        include _partials/footer-log.jade
+            include _partials/footer-log.jade
         include _partials/scripts.jade
 
 
