--- a/markup/_scss/fixes.scss
+++ b/markup/_scss/fixes.scss
@@ -1,3 +1,5 @@
+@import "base/mixins";
+
 html, body {
   height: 100%;
 }
@@ -15,9 +17,94 @@ html, body {
     flex: 0 0 auto;
   }
 
-  .contact-wrapper, .login-wrapper {
+  .contact-wrapper, .login-wrapper, .change-password-wrapper {
     width: 100%;
   }
 
 }
 
+.change-password-wrapper {
+  background: url(../img/stadion_full.jpg) 0 0 no-repeat;
+  background-size: cover;
+  background-position: bottom;
+  padding: 6rem 0;
+
+  .center-div {
+    max-width: 1200px;
+    margin: 0 auto;
+  }
+
+  button.btn.btn-primary {
+    font-weight: 600;
+  }
+  .show-password {
+    font-size: 0.75rem;
+  }
+
+  button.btn.btn-primary {
+    font-size: 11px;
+  }
+
+}
+
+#changePasswordSection {
+
+  .block-content {
+    box-shadow: none;
+  }
+  .block-header {
+
+    background-color: transparent;
+    color: #061540;
+    padding: 1rem;
+    position: relative;
+
+    h2 {
+      color: #061540;
+    }
+  }
+
+  .block-header, .block-footer {
+    border: none;
+  }
+  .block-body, .block-footer {
+    background-color: transparent;
+  }
+
+  .block-body {
+    height: 100%;
+    padding: calculateRem(25px) calculateRem(100px) 0;
+    @include respond-to(allsmall) {
+      padding: 0.5rem 1.25rem 0;
+    }
+    input {
+      width: 100%;
+      border-top-right-radius: 0.3rem;
+      border-top-left-radius: 0.3rem;
+      border-bottom-right-radius: 0.3rem;
+      border-bottom-left-radius: 0.3rem;
+      height: calculateRem(45px);
+      font-size: 0.75rem;
+      margin-bottom: calculateRem(20px);
+      @include respond-to(allsmall) {
+        width: 100%;
+      }
+    }
+
+    a {
+      text-decoration: underline;
+      color: #fb8700;
+    }
+  }
+  .block-footer {
+    padding: calculateRem(23px) 0;
+    border-bottom-right-radius: .3rem;
+    border-bottom-left-radius: .3rem;
+
+    button {
+      width: calculateRem(178px);
+      margin: 0 auto;
+    }
+  }
+
+}
