--- a/markup/_layouts/edit_profile.jade
+++ b/markup/_layouts/edit_profile.jade
@@ -13,15 +13,13 @@ html(lang="en")
 
 	body
 
+		.nl-wrapper
+			//include _partials/preloader.jade
+			include _partials/header-log.jade
+			main
+				include _content/edit-profile-content
 
-		//include _partials/preloader.jade
-		include _partials/header-log.jade
-		main
-
-
-			include _content/edit-profile-content
-
-		include _partials/footer-log.jade
+			include _partials/footer-log.jade
 		include _partials/scripts.jade
 
 
