--- a/markup/_layouts/_content/_homepage/top5-manager.jade
+++ b/markup/_layouts/_content/_homepage/top5-manager.jade
@@ -139,11 +139,13 @@ div.tab-content(id="top5-manager-content")
 																		div.col-12.orange.no-padding
 																			h3 Score: 123
 																		div.col-12.no-padding
-																			h3 The best NLC2 team!
+																			h3 The best NLC2 team!!
 																	div.row 
 																		div.col-10
-																			<img src="assets/img/helmet.png" alt="helmet" class="helmet">
-
+																			#create-helmet.final-helmet(style='display: block;')
+																				img#helmet.helmet-img(src='assets/img/helmet/red-helmet.png', style='display: block;')
+																				img#oval.img-fluid.select-oval(src='assets/img/oval/whiteoval.png', style='display: block;')
+																				img#letter.img-fluid.select-letter(src='assets/img/letter/n.png', style='display: block;')
 														.row
 															.col-12.no-padding
 																table.table.table-striped.nl-team-list-table
@@ -241,7 +243,10 @@ div.tab-content(id="top5-manager-content")
 																			h3 The best NLC2 team!
 																	div.row 
 																		div.col-10
-																			<img src="assets/img/helmet.png" alt="helmet" class="helmet">
+																			#create-helmet.final-helmet(style='display: block;')
+																				img#helmet.helmet-img(src='assets/img/helmet/red-helmet.png', style='display: block;')
+																				img#oval.img-fluid.select-oval(src='assets/img/oval/whiteoval.png', style='display: block;')
+																				img#letter.img-fluid.select-letter(src='assets/img/letter/n.png', style='display: block;')
 
 														.row
 															.col-12.no-padding
@@ -340,7 +345,10 @@ div.tab-content(id="top5-manager-content")
 																			h3 The best NLC2 team!
 																	div.row 
 																		div.col-10
-																			<img src="assets/img/helmet.png" alt="helmet" class="helmet">
+																			#create-helmet.final-helmet(style='display: block;')
+																				img#helmet.helmet-img(src='assets/img/helmet/red-helmet.png', style='display: block;')
+																				img#oval.img-fluid.select-oval(src='assets/img/oval/whiteoval.png', style='display: block;')
+																				img#letter.img-fluid.select-letter(src='assets/img/letter/n.png', style='display: block;')
 
 														.row
 															.col-12.no-padding
@@ -439,7 +447,10 @@ div.tab-content(id="top5-manager-content")
 																			h3 The best NLC2 team!
 																	div.row 
 																		div.col-10
-																			<img src="assets/img/helmet.png" alt="helmet" class="helmet">
+																			#create-helmet.final-helmet(style='display: block;')
+																				img#helmet.helmet-img(src='assets/img/helmet/red-helmet.png', style='display: block;')
+																				img#oval.img-fluid.select-oval(src='assets/img/oval/whiteoval.png', style='display: block;')
+																				img#letter.img-fluid.select-letter(src='assets/img/letter/n.png', style='display: block;')
 
 														.row
 															.col-12.no-padding
@@ -538,7 +549,10 @@ div.tab-content(id="top5-manager-content")
 																			h3 The best NLC2 team!
 																	div.row 
 																		div.col-10
-																			<img src="assets/img/helmet.png" alt="helmet" class="helmet">
+																			#create-helmet.final-helmet(style='display: block;')
+																				img#helmet.helmet-img(src='assets/img/helmet/red-helmet.png', style='display: block;')
+																				img#oval.img-fluid.select-oval(src='assets/img/oval/whiteoval.png', style='display: block;')
+																				img#letter.img-fluid.select-letter(src='assets/img/letter/n.png', style='display: block;')
 
 														.row
 															.col-12.no-padding
