--- a/markup/_layouts/_content/football_enter_contests_content.jade
+++ b/markup/_layouts/_content/football_enter_contests_content.jade
@@ -82,7 +82,10 @@ section.nl-section.nl-players.nl-enter-contests
 								p gronkowski
 								p.data.orange <span>12.67</span> <span>$42000</span>
 						div.nl-player-block.nl-DEF-position(data-position="DEF")
-							img(src="assets/img/helmet-3" alt="logo")
+							#create-helmet.final-helmet(style='display: block;')
+								img#helmet.helmet-img(src='assets/img/helmet/red-helmet.png', style='display: block;')
+								img#oval.img-fluid.select-oval(src='assets/img/oval/whiteoval.png', style='display: block;')
+								img#letter.img-fluid.select-letter(src='assets/img/letter/n.png', style='display: block;')
 							div.nl-player-block--data
 								p PATRIOTS
 								p.data.orange <span>12.67</span> <span>$42000</span>
@@ -93,7 +96,10 @@ section.nl-section.nl-players.nl-enter-contests
 							.col-12
 								div.nl-team-card.table-data-field
 									h3 team NLC2
-									<img src="assets/img/helmet.png" alt="helmet" class="helmet-team">
+									#create-helmet.final-helmet(style='display: block;')
+										img#helmet.helmet-img(src='assets/img/helmet/red-helmet.png', style='display: block;')
+										img#oval.img-fluid.select-oval(src='assets/img/oval/whiteoval.png', style='display: block;')
+										img#letter.img-fluid.select-letter(src='assets/img/letter/n.png', style='display: block;')
 
 						.row
 							.col-12
