--- a/markup/_scss/sections/_nl-enter-contests.scss
+++ b/markup/_scss/sections/_nl-enter-contests.scss
@@ -285,6 +285,27 @@
     }
 
     &.football{
+
+    #create-helmet {
+
+        #oval {
+          position: absolute;
+          top: 14px;
+          z-index: 1;
+          right: 60px;
+          width: 27%;
+          height: auto;
+        }
+        #letter {
+          position: absolute;
+          top: 16px;
+          z-index: 2;
+          right: 68px;
+          width: 13%;
+          height: auto;
+        }
+      }
+
       background: url(../img/football/nl-football-field.png) no-repeat 0 0;
       background-size: contain;
       //min-height: 420px;
