--- a/markup/_scss/style.scss
+++ b/markup/_scss/style.scss
@@ -76,4 +76,6 @@
 @import "sections/_my_balances";
 @import "sections/_terms-conditions";
 
+@import "sections/_my_contests_content";
+
 @import "elements/nl-theme-selector";
